--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.10",
+    "react-native-indicators": "^0.13.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-responsive-grid": "^0.41.992",
     "react-native-responsive-image": "^2.3.1",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-search-box": "0.0.18",
+    "react-native-searchbar": "^1.14.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.1",
     "react-navigation-fluid-transitions": "^0.2.0"
