--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
     compile project(':react-native-image-picker')
     compile project(':react-native-vector-icons')
     compile project(':react-native-custom-tabs')
+    compile project(':react-native-cookies')
     
     compile fileTree(dir: "libs", include: ["*.jar"])
     // compile "com.android.support:appcompat-v7:23.0.1"
