--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-app-auth": "^2.4.1",
+    "react-native-cookiemanager": "^0.2.0",
+    "react-native-cookies": "^3.3.0",
     "react-native-custom-tabs": "^0.1.7",
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
