--- a/android/.project
+++ b/android/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hh</name>
-	<comment>Project hh created by Buildship.</comment>
+	<name>tugether</name>
+	<comment>Project tugether created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
