--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,7 +100,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.hh"
+        applicationId "com.tugether"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
