--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-
+apply plugin: 'com.google.gms.google-services'
 import com.android.build.OutputFile
 
 /**
@@ -149,7 +149,9 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-custom-tabs')
     compile project(':react-native-cookies')
-    
+    compile project(':react-native-fcm')
+    compile 'com.google.firebase:firebase-core:10.0.1' //this decides your firebase SDK version
+    compile 'com.google.firebase:firebase-messaging:10.0.1'   
     compile fileTree(dir: "libs", include: ["*.jar"])
     // compile "com.android.support:appcompat-v7:23.0.1"
     // compile "com.android.support:appcompat-v7:25.0.1"
