--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-cookies": "^3.3.0",
     "react-native-custom-tabs": "^0.1.7",
     "react-native-elements": "^0.19.1",
+    "react-native-fcm": "^15.0.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.10",
     "react-native-indicators": "^0.13.0",
