--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.10",
     "react-native-indicators": "^0.13.0",
+    "react-native-material-ripple": "^0.8.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-responsive-grid": "^0.41.992",
     "react-native-responsive-image": "^2.3.1",
